etapa2/parser.output
Terminals which are not used

   TK_PR_INPUT
   TK_PR_OUTPUT
   TK_PR_FOR
   TK_ERRO


State 90 conflicts: 18 reduce/reduce


Grammar

    0 $accept: programa $end

    1 programa: lista_de_elementos
    2         | /* empty */

    3 lista_de_elementos: lista_de_elementos declaracao_funcao
    4                   | lista_de_elementos declaracao_var_global
    5                   | declaracao_funcao
    6                   | declaracao_var_global

    7 tipo: TK_PR_INT
    8     | TK_PR_FLOAT
    9     | TK_PR_BOOL
   10     | TK_PR_CHAR

   11 lista_dimensional: TK_LIT_INT
   12                  | lista_dimensional '^' TK_LIT_INT

   13 var_multidimensional: TK_IDENTIFICADOR '[' lista_dimensional ']'

   14 declaracao_var_global: tipo lista_de_identificadores ';'

   15 lista_de_identificadores: TK_IDENTIFICADOR
   16                         | var_multidimensional
   17                         | lista_de_identificadores ',' TK_IDENTIFICADOR
   18                         | lista_de_identificadores ',' var_multidimensional

   19 declaracao_funcao: cabecalho corpo

   20 cabecalho: tipo TK_IDENTIFICADOR '(' lista_parametros ')'

   21 lista_parametros: parametros_entrada
   22                 | /* empty */

   23 parametros_entrada: parametros_entrada ',' parametro
   24                   | parametro

   25 parametro: tipo TK_IDENTIFICADOR

   26 corpo: bloco_comandos

   27 bloco_comandos: '{' lista_comandos '}'
   28               | '{' '}'

   29 lista_comandos: lista_comandos comando ';'
   30               | comando ';'

   31 comando: declaracao_var_local
   32        | atribuicao
   33        | retorno
   34        | bloco_comandos
   35        | chamada_funcao
   36        | controle_fluxo
   37        | controle_fluxo_while

   38 literal: TK_LIT_INT
   39        | TK_LIT_CHAR
   40        | TK_LIT_FALSE
   41        | TK_LIT_TRUE
   42        | TK_LIT_FLOAT

   43 declaracao_var_local: tipo lista_de_identificadores_local

   44 inic_var_local: TK_OC_LE literal
   45               | /* empty */

   46 identificador_local: TK_IDENTIFICADOR inic_var_local

   47 lista_de_identificadores_local: lista_de_identificadores_local ',' identificador_local
   48                               | identificador_local

   49 atribuicao: identificador_expressao '=' expressao

   50 lista_argumentos: argumentos_entrada
   51                 | /* empty */

   52 argumentos_entrada: argumentos_entrada ',' argumento
   53                   | argumento

   54 argumento: expressao

   55 controle_fluxo: TK_PR_IF '(' expressao ')' TK_PR_THEN bloco_comandos
   56               | TK_PR_IF '(' expressao ')' TK_PR_THEN bloco_comandos TK_PR_ELSE bloco_comandos

   57 controle_fluxo_while: TK_PR_WHILE '(' expressao ')' bloco_comandos

   58 retorno: TK_PR_RETURN expressao

   59 chamada_funcao: TK_IDENTIFICADOR '(' lista_argumentos ')'

   60 expressao: E

   61 E: E TK_OC_OR T
   62  | T

   63 T: T TK_OC_AND F
   64  | F

   65 F: F TK_OC_EQ G
   66  | F TK_OC_NE G
   67  | G

   68 G: G TK_OC_GE H
   69  | G TK_OC_LE H
   70  | G '<' H
   71  | G '>' H
   72  | H

   73 H: H '+' I
   74  | H '-' I
   75  | I

   76 I: I '%' J
   77  | I '/' J
   78  | I '*' J
   79  | J

   80 J: '-' K
   81  | '!' K
   82  | K

   83 K: '-' K
   84  | L

   85 L: '(' E ')'
   86  | operando

   87 operando: literal
   88         | chamada_funcao
   89         | identificador_expressao

   90 identificador_expressao: TK_IDENTIFICADOR
   91                        | TK_IDENTIFICADOR '[' lista_expressoes ']'

   92 lista_expressoes: lista_expressoes '^' expressao
   93                 | expressao


Terminals, with rules where they appear

$end (0) 0
'!' (33) 81
'%' (37) 76
'(' (40) 20 55 56 57 59 85
')' (41) 20 55 56 57 59 85
'*' (42) 78
'+' (43) 73
',' (44) 17 18 23 47 52
'-' (45) 74 80 83
'/' (47) 77
';' (59) 14 29 30
'<' (60) 70
'=' (61) 49
'>' (62) 71
'[' (91) 13 91
']' (93) 13 91
'^' (94) 12 92
'{' (123) 27 28
'}' (125) 27 28
error (256)
TK_PR_INT (258) 7
TK_PR_FLOAT (259) 8
TK_PR_BOOL (260) 9
TK_PR_CHAR (261) 10
TK_PR_IF (262) 55 56
TK_PR_THEN (263) 55 56
TK_PR_ELSE (264) 56
TK_PR_WHILE (265) 57
TK_PR_INPUT (266)
TK_PR_OUTPUT (267)
TK_PR_RETURN (268) 58
TK_PR_FOR (269)
TK_OC_LE (270) 44 69
TK_OC_GE (271) 68
TK_OC_EQ (272) 65
TK_OC_NE (273) 66
TK_OC_AND (274) 63
TK_OC_OR (275) 61
TK_LIT_INT (276) 11 12 38
TK_LIT_FLOAT (277) 42
TK_LIT_FALSE (278) 40
TK_LIT_TRUE (279) 41
TK_LIT_CHAR (280) 39
TK_IDENTIFICADOR (281) 13 15 17 20 25 46 59 90 91
TK_ERRO (282)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
programa (47)
    on left: 1 2, on right: 0
lista_de_elementos (48)
    on left: 3 4 5 6, on right: 1 3 4
tipo (49)
    on left: 7 8 9 10, on right: 14 20 25 43
lista_dimensional (50)
    on left: 11 12, on right: 12 13
var_multidimensional (51)
    on left: 13, on right: 16 18
declaracao_var_global (52)
    on left: 14, on right: 4 6
lista_de_identificadores (53)
    on left: 15 16 17 18, on right: 14 17 18
declaracao_funcao (54)
    on left: 19, on right: 3 5
cabecalho (55)
    on left: 20, on right: 19
lista_parametros (56)
    on left: 21 22, on right: 20
parametros_entrada (57)
    on left: 23 24, on right: 21 23
parametro (58)
    on left: 25, on right: 23 24
corpo (59)
    on left: 26, on right: 19
bloco_comandos (60)
    on left: 27 28, on right: 26 34 55 56 57
lista_comandos (61)
    on left: 29 30, on right: 27 29
comando (62)
    on left: 31 32 33 34 35 36 37, on right: 29 30
literal (63)
    on left: 38 39 40 41 42, on right: 44 87
declaracao_var_local (64)
    on left: 43, on right: 31
inic_var_local (65)
    on left: 44 45, on right: 46
identificador_local (66)
    on left: 46, on right: 47 48
lista_de_identificadores_local (67)
    on left: 47 48, on right: 43 47
atribuicao (68)
    on left: 49, on right: 32
lista_argumentos (69)
    on left: 50 51, on right: 59
argumentos_entrada (70)
    on left: 52 53, on right: 50 52
argumento (71)
    on left: 54, on right: 52 53
controle_fluxo (72)
    on left: 55 56, on right: 36
controle_fluxo_while (73)
    on left: 57, on right: 37
retorno (74)
    on left: 58, on right: 33
chamada_funcao (75)
    on left: 59, on right: 35 88
expressao (76)
    on left: 60, on right: 49 54 55 56 57 58 92 93
E (77)
    on left: 61 62, on right: 60 61 85
T (78)
    on left: 63 64, on right: 61 62 63
F (79)
    on left: 65 66 67, on right: 63 64 65 66
G (80)
    on left: 68 69 70 71 72, on right: 65 66 67 68 69 70 71
H (81)
    on left: 73 74 75, on right: 68 69 70 71 72 73 74
I (82)
    on left: 76 77 78 79, on right: 73 74 75 76 77 78
J (83)
    on left: 80 81 82, on right: 76 77 78 79
K (84)
    on left: 83 84, on right: 80 81 82 83
L (85)
    on left: 85 86, on right: 84
operando (86)
    on left: 87 88 89, on right: 86
identificador_expressao (87)
    on left: 90 91, on right: 49 89
lista_expressoes (88)
    on left: 92 93, on right: 91 92


state 0

    0 $accept: . programa $end

    TK_PR_INT    shift, and go to state 1
    TK_PR_FLOAT  shift, and go to state 2
    TK_PR_BOOL   shift, and go to state 3
    TK_PR_CHAR   shift, and go to state 4

    $default  reduce using rule 2 (programa)

    programa               go to state 5
    lista_de_elementos     go to state 6
    tipo                   go to state 7
    declaracao_var_global  go to state 8
    declaracao_funcao      go to state 9
    cabecalho              go to state 10


state 1

    7 tipo: TK_PR_INT .

    $default  reduce using rule 7 (tipo)


state 2

    8 tipo: TK_PR_FLOAT .

    $default  reduce using rule 8 (tipo)


state 3

    9 tipo: TK_PR_BOOL .

    $default  reduce using rule 9 (tipo)


state 4

   10 tipo: TK_PR_CHAR .

    $default  reduce using rule 10 (tipo)


state 5

    0 $accept: programa . $end

    $end  shift, and go to state 11


state 6

    1 programa: lista_de_elementos .
    3 lista_de_elementos: lista_de_elementos . declaracao_funcao
    4                   | lista_de_elementos . declaracao_var_global

    TK_PR_INT    shift, and go to state 1
    TK_PR_FLOAT  shift, and go to state 2
    TK_PR_BOOL   shift, and go to state 3
    TK_PR_CHAR   shift, and go to state 4

    $default  reduce using rule 1 (programa)

    tipo                   go to state 7
    declaracao_var_global  go to state 12
    declaracao_funcao      go to state 13
    cabecalho              go to state 10


state 7

   14 declaracao_var_global: tipo . lista_de_identificadores ';'
   20 cabecalho: tipo . TK_IDENTIFICADOR '(' lista_parametros ')'

    TK_IDENTIFICADOR  shift, and go to state 14

    var_multidimensional      go to state 15
    lista_de_identificadores  go to state 16


state 8

    6 lista_de_elementos: declaracao_var_global .

    $default  reduce using rule 6 (lista_de_elementos)


state 9

    5 lista_de_elementos: declaracao_funcao .

    $default  reduce using rule 5 (lista_de_elementos)


state 10

   19 declaracao_funcao: cabecalho . corpo

    '{'  shift, and go to state 17

    corpo           go to state 18
    bloco_comandos  go to state 19


state 11

    0 $accept: programa $end .

    $default  accept


state 12

    4 lista_de_elementos: lista_de_elementos declaracao_var_global .

    $default  reduce using rule 4 (lista_de_elementos)


state 13

    3 lista_de_elementos: lista_de_elementos declaracao_funcao .

    $default  reduce using rule 3 (lista_de_elementos)


state 14

   13 var_multidimensional: TK_IDENTIFICADOR . '[' lista_dimensional ']'
   15 lista_de_identificadores: TK_IDENTIFICADOR .
   20 cabecalho: tipo TK_IDENTIFICADOR . '(' lista_parametros ')'

    '['  shift, and go to state 20
    '('  shift, and go to state 21

    $default  reduce using rule 15 (lista_de_identificadores)


state 15

   16 lista_de_identificadores: var_multidimensional .

    $default  reduce using rule 16 (lista_de_identificadores)


state 16

   14 declaracao_var_global: tipo lista_de_identificadores . ';'
   17 lista_de_identificadores: lista_de_identificadores . ',' TK_IDENTIFICADOR
   18                         | lista_de_identificadores . ',' var_multidimensional

    ';'  shift, and go to state 22
    ','  shift, and go to state 23


state 17

   27 bloco_comandos: '{' . lista_comandos '}'
   28               | '{' . '}'

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_IF          shift, and go to state 24
    TK_PR_WHILE       shift, and go to state 25
    TK_PR_RETURN      shift, and go to state 26
    TK_IDENTIFICADOR  shift, and go to state 27
    '{'               shift, and go to state 17
    '}'               shift, and go to state 28

    tipo                     go to state 29
    bloco_comandos           go to state 30
    lista_comandos           go to state 31
    comando                  go to state 32
    declaracao_var_local     go to state 33
    atribuicao               go to state 34
    controle_fluxo           go to state 35
    controle_fluxo_while     go to state 36
    retorno                  go to state 37
    chamada_funcao           go to state 38
    identificador_expressao  go to state 39


state 18

   19 declaracao_funcao: cabecalho corpo .

    $default  reduce using rule 19 (declaracao_funcao)


state 19

   26 corpo: bloco_comandos .

    $default  reduce using rule 26 (corpo)


state 20

   13 var_multidimensional: TK_IDENTIFICADOR '[' . lista_dimensional ']'

    TK_LIT_INT  shift, and go to state 40

    lista_dimensional  go to state 41


state 21

   20 cabecalho: tipo TK_IDENTIFICADOR '(' . lista_parametros ')'

    TK_PR_INT    shift, and go to state 1
    TK_PR_FLOAT  shift, and go to state 2
    TK_PR_BOOL   shift, and go to state 3
    TK_PR_CHAR   shift, and go to state 4

    $default  reduce using rule 22 (lista_parametros)

    tipo                go to state 42
    lista_parametros    go to state 43
    parametros_entrada  go to state 44
    parametro           go to state 45


state 22

   14 declaracao_var_global: tipo lista_de_identificadores ';' .

    $default  reduce using rule 14 (declaracao_var_global)


state 23

   17 lista_de_identificadores: lista_de_identificadores ',' . TK_IDENTIFICADOR
   18                         | lista_de_identificadores ',' . var_multidimensional

    TK_IDENTIFICADOR  shift, and go to state 46

    var_multidimensional  go to state 47


state 24

   55 controle_fluxo: TK_PR_IF . '(' expressao ')' TK_PR_THEN bloco_comandos
   56               | TK_PR_IF . '(' expressao ')' TK_PR_THEN bloco_comandos TK_PR_ELSE bloco_comandos

    '('  shift, and go to state 48


state 25

   57 controle_fluxo_while: TK_PR_WHILE . '(' expressao ')' bloco_comandos

    '('  shift, and go to state 49


state 26

   58 retorno: TK_PR_RETURN . expressao

    TK_LIT_INT        shift, and go to state 50
    TK_LIT_FLOAT      shift, and go to state 51
    TK_LIT_FALSE      shift, and go to state 52
    TK_LIT_TRUE       shift, and go to state 53
    TK_LIT_CHAR       shift, and go to state 54
    TK_IDENTIFICADOR  shift, and go to state 27
    '('               shift, and go to state 55
    '-'               shift, and go to state 56
    '!'               shift, and go to state 57

    literal                  go to state 58
    chamada_funcao           go to state 59
    expressao                go to state 60
    E                        go to state 61
    T                        go to state 62
    F                        go to state 63
    G                        go to state 64
    H                        go to state 65
    I                        go to state 66
    J                        go to state 67
    K                        go to state 68
    L                        go to state 69
    operando                 go to state 70
    identificador_expressao  go to state 71


state 27

   59 chamada_funcao: TK_IDENTIFICADOR . '(' lista_argumentos ')'
   90 identificador_expressao: TK_IDENTIFICADOR .
   91                        | TK_IDENTIFICADOR . '[' lista_expressoes ']'

    '['  shift, and go to state 72
    '('  shift, and go to state 73

    $default  reduce using rule 90 (identificador_expressao)


state 28

   28 bloco_comandos: '{' '}' .

    $default  reduce using rule 28 (bloco_comandos)


state 29

   43 declaracao_var_local: tipo . lista_de_identificadores_local

    TK_IDENTIFICADOR  shift, and go to state 74

    identificador_local             go to state 75
    lista_de_identificadores_local  go to state 76


state 30

   34 comando: bloco_comandos .

    $default  reduce using rule 34 (comando)


state 31

   27 bloco_comandos: '{' lista_comandos . '}'
   29 lista_comandos: lista_comandos . comando ';'

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_IF          shift, and go to state 24
    TK_PR_WHILE       shift, and go to state 25
    TK_PR_RETURN      shift, and go to state 26
    TK_IDENTIFICADOR  shift, and go to state 27
    '{'               shift, and go to state 17
    '}'               shift, and go to state 77

    tipo                     go to state 29
    bloco_comandos           go to state 30
    comando                  go to state 78
    declaracao_var_local     go to state 33
    atribuicao               go to state 34
    controle_fluxo           go to state 35
    controle_fluxo_while     go to state 36
    retorno                  go to state 37
    chamada_funcao           go to state 38
    identificador_expressao  go to state 39


state 32

   30 lista_comandos: comando . ';'

    ';'  shift, and go to state 79


state 33

   31 comando: declaracao_var_local .

    $default  reduce using rule 31 (comando)


state 34

   32 comando: atribuicao .

    $default  reduce using rule 32 (comando)


state 35

   36 comando: controle_fluxo .

    $default  reduce using rule 36 (comando)


state 36

   37 comando: controle_fluxo_while .

    $default  reduce using rule 37 (comando)


state 37

   33 comando: retorno .

    $default  reduce using rule 33 (comando)


state 38

   35 comando: chamada_funcao .

    $default  reduce using rule 35 (comando)


state 39

   49 atribuicao: identificador_expressao . '=' expressao

    '='  shift, and go to state 80


state 40

   11 lista_dimensional: TK_LIT_INT .

    $default  reduce using rule 11 (lista_dimensional)


state 41

   12 lista_dimensional: lista_dimensional . '^' TK_LIT_INT
   13 var_multidimensional: TK_IDENTIFICADOR '[' lista_dimensional . ']'

    '^'  shift, and go to state 81
    ']'  shift, and go to state 82


state 42

   25 parametro: tipo . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 83


state 43

   20 cabecalho: tipo TK_IDENTIFICADOR '(' lista_parametros . ')'

    ')'  shift, and go to state 84


state 44

   21 lista_parametros: parametros_entrada .
   23 parametros_entrada: parametros_entrada . ',' parametro

    ','  shift, and go to state 85

    $default  reduce using rule 21 (lista_parametros)


state 45

   24 parametros_entrada: parametro .

    $default  reduce using rule 24 (parametros_entrada)


state 46

   13 var_multidimensional: TK_IDENTIFICADOR . '[' lista_dimensional ']'
   17 lista_de_identificadores: lista_de_identificadores ',' TK_IDENTIFICADOR .

    '['  shift, and go to state 20

    $default  reduce using rule 17 (lista_de_identificadores)


state 47

   18 lista_de_identificadores: lista_de_identificadores ',' var_multidimensional .

    $default  reduce using rule 18 (lista_de_identificadores)


state 48

   55 controle_fluxo: TK_PR_IF '(' . expressao ')' TK_PR_THEN bloco_comandos
   56               | TK_PR_IF '(' . expressao ')' TK_PR_THEN bloco_comandos TK_PR_ELSE bloco_comandos

    TK_LIT_INT        shift, and go to state 50
    TK_LIT_FLOAT      shift, and go to state 51
    TK_LIT_FALSE      shift, and go to state 52
    TK_LIT_TRUE       shift, and go to state 53
    TK_LIT_CHAR       shift, and go to state 54
    TK_IDENTIFICADOR  shift, and go to state 27
    '('               shift, and go to state 55
    '-'               shift, and go to state 56
    '!'               shift, and go to state 57

    literal                  go to state 58
    chamada_funcao           go to state 59
    expressao                go to state 86
    E                        go to state 61
    T                        go to state 62
    F                        go to state 63
    G                        go to state 64
    H                        go to state 65
    I                        go to state 66
    J                        go to state 67
    K                        go to state 68
    L                        go to state 69
    operando                 go to state 70
    identificador_expressao  go to state 71


state 49

   57 controle_fluxo_while: TK_PR_WHILE '(' . expressao ')' bloco_comandos

    TK_LIT_INT        shift, and go to state 50
    TK_LIT_FLOAT      shift, and go to state 51
    TK_LIT_FALSE      shift, and go to state 52
    TK_LIT_TRUE       shift, and go to state 53
    TK_LIT_CHAR       shift, and go to state 54
    TK_IDENTIFICADOR  shift, and go to state 27
    '('               shift, and go to state 55
    '-'               shift, and go to state 56
    '!'               shift, and go to state 57

    literal                  go to state 58
    chamada_funcao           go to state 59
    expressao                go to state 87
    E                        go to state 61
    T                        go to state 62
    F                        go to state 63
    G                        go to state 64
    H                        go to state 65
    I                        go to state 66
    J                        go to state 67
    K                        go to state 68
    L                        go to state 69
    operando                 go to state 70
    identificador_expressao  go to state 71


state 50

   38 literal: TK_LIT_INT .

    $default  reduce using rule 38 (literal)


state 51

   42 literal: TK_LIT_FLOAT .

    $default  reduce using rule 42 (literal)


state 52

   40 literal: TK_LIT_FALSE .

    $default  reduce using rule 40 (literal)


state 53

   41 literal: TK_LIT_TRUE .

    $default  reduce using rule 41 (literal)


state 54

   39 literal: TK_LIT_CHAR .

    $default  reduce using rule 39 (literal)


state 55

   85 L: '(' . E ')'

    TK_LIT_INT        shift, and go to state 50
    TK_LIT_FLOAT      shift, and go to state 51
    TK_LIT_FALSE      shift, and go to state 52
    TK_LIT_TRUE       shift, and go to state 53
    TK_LIT_CHAR       shift, and go to state 54
    TK_IDENTIFICADOR  shift, and go to state 27
    '('               shift, and go to state 55
    '-'               shift, and go to state 56
    '!'               shift, and go to state 57

    literal                  go to state 58
    chamada_funcao           go to state 59
    E                        go to state 88
    T                        go to state 62
    F                        go to state 63
    G                        go to state 64
    H                        go to state 65
    I                        go to state 66
    J                        go to state 67
    K                        go to state 68
    L                        go to state 69
    operando                 go to state 70
    identificador_expressao  go to state 71


state 56

   80 J: '-' . K
   83 K: '-' . K

    TK_LIT_INT        shift, and go to state 50
    TK_LIT_FLOAT      shift, and go to state 51
    TK_LIT_FALSE      shift, and go to state 52
    TK_LIT_TRUE       shift, and go to state 53
    TK_LIT_CHAR       shift, and go to state 54
    TK_IDENTIFICADOR  shift, and go to state 27
    '('               shift, and go to state 55
    '-'               shift, and go to state 89

    literal                  go to state 58
    chamada_funcao           go to state 59
    K                        go to state 90
    L                        go to state 69
    operando                 go to state 70
    identificador_expressao  go to state 71


state 57

   81 J: '!' . K

    TK_LIT_INT        shift, and go to state 50
    TK_LIT_FLOAT      shift, and go to state 51
    TK_LIT_FALSE      shift, and go to state 52
    TK_LIT_TRUE       shift, and go to state 53
    TK_LIT_CHAR       shift, and go to state 54
    TK_IDENTIFICADOR  shift, and go to state 27
    '('               shift, and go to state 55
    '-'               shift, and go to state 89

    literal                  go to state 58
    chamada_funcao           go to state 59
    K                        go to state 91
    L                        go to state 69
    operando                 go to state 70
    identificador_expressao  go to state 71


state 58

   87 operando: literal .

    $default  reduce using rule 87 (operando)


state 59

   88 operando: chamada_funcao .

    $default  reduce using rule 88 (operando)


state 60

   58 retorno: TK_PR_RETURN expressao .

    $default  reduce using rule 58 (retorno)


state 61

   60 expressao: E .
   61 E: E . TK_OC_OR T

    TK_OC_OR  shift, and go to state 92

    $default  reduce using rule 60 (expressao)


state 62

   62 E: T .
   63 T: T . TK_OC_AND F

    TK_OC_AND  shift, and go to state 93

    $default  reduce using rule 62 (E)


state 63

   64 T: F .
   65 F: F . TK_OC_EQ G
   66  | F . TK_OC_NE G

    TK_OC_EQ  shift, and go to state 94
    TK_OC_NE  shift, and go to state 95

    $default  reduce using rule 64 (T)


state 64

   67 F: G .
   68 G: G . TK_OC_GE H
   69  | G . TK_OC_LE H
   70  | G . '<' H
   71  | G . '>' H

    TK_OC_LE  shift, and go to state 96
    TK_OC_GE  shift, and go to state 97
    '<'       shift, and go to state 98
    '>'       shift, and go to state 99

    $default  reduce using rule 67 (F)


state 65

   72 G: H .
   73 H: H . '+' I
   74  | H . '-' I

    '+'  shift, and go to state 100
    '-'  shift, and go to state 101

    $default  reduce using rule 72 (G)


state 66

   75 H: I .
   76 I: I . '%' J
   77  | I . '/' J
   78  | I . '*' J

    '%'  shift, and go to state 102
    '/'  shift, and go to state 103
    '*'  shift, and go to state 104

    $default  reduce using rule 75 (H)


state 67

   79 I: J .

    $default  reduce using rule 79 (I)


state 68

   82 J: K .

    $default  reduce using rule 82 (J)


state 69

   84 K: L .

    $default  reduce using rule 84 (K)


state 70

   86 L: operando .

    $default  reduce using rule 86 (L)


state 71

   89 operando: identificador_expressao .

    $default  reduce using rule 89 (operando)


state 72

   91 identificador_expressao: TK_IDENTIFICADOR '[' . lista_expressoes ']'

    TK_LIT_INT        shift, and go to state 50
    TK_LIT_FLOAT      shift, and go to state 51
    TK_LIT_FALSE      shift, and go to state 52
    TK_LIT_TRUE       shift, and go to state 53
    TK_LIT_CHAR       shift, and go to state 54
    TK_IDENTIFICADOR  shift, and go to state 27
    '('               shift, and go to state 55
    '-'               shift, and go to state 56
    '!'               shift, and go to state 57

    literal                  go to state 58
    chamada_funcao           go to state 59
    expressao                go to state 105
    E                        go to state 61
    T                        go to state 62
    F                        go to state 63
    G                        go to state 64
    H                        go to state 65
    I                        go to state 66
    J                        go to state 67
    K                        go to state 68
    L                        go to state 69
    operando                 go to state 70
    identificador_expressao  go to state 71
    lista_expressoes         go to state 106


state 73

   59 chamada_funcao: TK_IDENTIFICADOR '(' . lista_argumentos ')'

    TK_LIT_INT        shift, and go to state 50
    TK_LIT_FLOAT      shift, and go to state 51
    TK_LIT_FALSE      shift, and go to state 52
    TK_LIT_TRUE       shift, and go to state 53
    TK_LIT_CHAR       shift, and go to state 54
    TK_IDENTIFICADOR  shift, and go to state 27
    '('               shift, and go to state 55
    '-'               shift, and go to state 56
    '!'               shift, and go to state 57

    $default  reduce using rule 51 (lista_argumentos)

    literal                  go to state 58
    lista_argumentos         go to state 107
    argumentos_entrada       go to state 108
    argumento                go to state 109
    chamada_funcao           go to state 59
    expressao                go to state 110
    E                        go to state 61
    T                        go to state 62
    F                        go to state 63
    G                        go to state 64
    H                        go to state 65
    I                        go to state 66
    J                        go to state 67
    K                        go to state 68
    L                        go to state 69
    operando                 go to state 70
    identificador_expressao  go to state 71


state 74

   46 identificador_local: TK_IDENTIFICADOR . inic_var_local

    TK_OC_LE  shift, and go to state 111

    $default  reduce using rule 45 (inic_var_local)

    inic_var_local  go to state 112


state 75

   48 lista_de_identificadores_local: identificador_local .

    $default  reduce using rule 48 (lista_de_identificadores_local)


state 76

   43 declaracao_var_local: tipo lista_de_identificadores_local .
   47 lista_de_identificadores_local: lista_de_identificadores_local . ',' identificador_local

    ','  shift, and go to state 113

    $default  reduce using rule 43 (declaracao_var_local)


state 77

   27 bloco_comandos: '{' lista_comandos '}' .

    $default  reduce using rule 27 (bloco_comandos)


state 78

   29 lista_comandos: lista_comandos comando . ';'

    ';'  shift, and go to state 114


state 79

   30 lista_comandos: comando ';' .

    $default  reduce using rule 30 (lista_comandos)


state 80

   49 atribuicao: identificador_expressao '=' . expressao

    TK_LIT_INT        shift, and go to state 50
    TK_LIT_FLOAT      shift, and go to state 51
    TK_LIT_FALSE      shift, and go to state 52
    TK_LIT_TRUE       shift, and go to state 53
    TK_LIT_CHAR       shift, and go to state 54
    TK_IDENTIFICADOR  shift, and go to state 27
    '('               shift, and go to state 55
    '-'               shift, and go to state 56
    '!'               shift, and go to state 57
